<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/power_stats"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/powerstats"
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="65dp"
                    android:layout_marginTop="45dp"
                    android:layout_marginEnd="65dp"
                    android:text="@string/power_stats_text"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <LinearLayout
                    android:id="@+id/power_keys"
                    android:layout_width="128dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="65dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="25dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingStart="30sp"
                    android:paddingEnd="0sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/power_value"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/power_stats"
                    app:layout_constraintVertical_bias="0.0">

                    <TextView
                        android:id="@+id/textViewInt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginBottom="20dp"
                        android:text="@string/intel"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/textViewStr"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginBottom="20dp"
                        android:text="@string/str"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/textViewSpeed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginBottom="20dp"
                        android:text="@string/spe"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/textViewDur"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginBottom="20dp"
                        android:text="@string/dur"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/textViewPow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginBottom="20dp"
                        android:text="@string/pow"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/textViewCombat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginBottom="20dp"
                        android:text="@string/com"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/power_value"
                    android:layout_width="134dp"
                    android:layout_height="235dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="65dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/power_keys"
                    app:layout_constraintTop_toBottomOf="@+id/powerstats"
                    app:layout_constraintVertical_bias="0.0">

                    <TextView
                        android:id="@+id/intel"
                        android:layout_width="50sp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="20dp"
                        android:gravity="end" />

                    <TextView
                        android:id="@+id/str"
                        android:layout_width="50sp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="20dp"
                        android:gravity="end" />

                    <TextView
                        android:id="@+id/spe"
                        android:layout_width="50sp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="20dp"
                        android:gravity="end" />

                    <TextView
                        android:id="@+id/dur"
                        android:layout_width="50sp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="20dp"
                        android:gravity="end" />

                    <TextView
                        android:id="@+id/pow"
                        android:layout_width="50sp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="20dp"
                        android:gravity="end" />

                    <TextView
                        android:id="@+id/com"
                        android:layout_width="50sp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="20dp"
                        android:gravity="end" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/biography"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/bio"
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="65dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="65dp"
                    android:text="@string/general_info"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/bio_keys"
                    android:layout_width="128dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="65dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="25dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingStart="30sp"
                    android:paddingEnd="0sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/bio"
                    app:layout_constraintVertical_bias="0.0">

                    <TextView
                        android:id="@+id/textViewGender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginBottom="20dp"
                        android:text="@string/gender"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/textViewAliases"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginBottom="20dp"
                        android:text="@string/race"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/textViewAlterHeight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginBottom="20dp"
                        android:text="@string/height"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/textViewWeight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginBottom="20dp"
                        android:text="@string/weight"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/textViewRace"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginBottom="20dp"
                        android:text="@string/alignment"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/textViewAlignment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginBottom="20dp"
                        android:text="@string/base"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/textViewBase"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginBottom="20dp"
                        android:text="@string/aliases"
                        android:textSize="14sp" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/bio_value"
                    android:layout_width="134dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="65dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/bio_keys"
                    app:layout_constraintTop_toBottomOf="@+id/bio"
                    app:layout_constraintVertical_bias="0.0">

                    <TextView
                        android:id="@+id/gender"
                        android:layout_width="50sp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="20dp"
                        android:gravity="end" />

                    <TextView
                        android:id="@+id/race"
                        android:layout_width="50sp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="20dp"
                        android:gravity="end" />

                    <TextView
                        android:id="@+id/height"
                        android:layout_width="50sp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="20dp"
                        android:gravity="end" />

                    <TextView
                        android:id="@+id/weight"
                        android:layout_width="50sp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="20dp"
                        android:gravity="end" />

                    <TextView
                        android:id="@+id/alignment"
                        android:layout_width="50sp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="20dp"
                        android:gravity="end" />

                    <TextView
                        android:id="@+id/base"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="20dp"
                        android:gravity="end" />

                    <LinearLayout
                        android:id="@+id/alias_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingStart="35dp"
                        android:paddingEnd="0dp" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>